--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
                     <p class="text-muted">Born in 24 February 1983-Iran <br/>
                       Visual Arts – BA, Mazandaran University, Iran <br/>
                       Member of  Iranian Graphic Designers Society (IGDS) Since 2015 <br/>
+
+                      Contact: Mehdi.raheemi(AT)gmail.com
                     </p>
                   </div>
                 </div>
