add a new project

--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal15">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/arting/04.jpg" style="max-height:250px;width:100%;" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Artingle</h4>
+              <p class="text-muted">Visual Identity</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -924,7 +938,7 @@
         </div>
       </div>
     </div>
-    <!-- Modal 4 -->
+    <!-- Modal 3 -->
     <div class="portfolio-modal modal fade" id="portfolioModal13" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -1000,6 +1014,43 @@
         </div>
       </div>
     </div>
+      <!-- Modal 15 -->
+      <div class="portfolio-modal modal fade" id="portfolioModal15" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+              <div class="lr">
+                <div class="rl"></div>
+              </div>
+            </div>
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-8 mx-auto">
+                  <div class="modal-body">
+                    <!-- Project Details Go Here -->
+                    <h2 class="text-uppercase">Artingle</h2>
+                    <p class="item-intro text-muted"></p>
+                    <img class="img-fluid d-block max-auto lazy" data-src="img/portfolio/arting/04.jpg" alt="">
+                    <img class="img-fluid d-block max-auto lazy" data-src="img/portfolio/arting/05.jpg" alt="">
+                    <img class="img-fluid d-block max-auto lazy" data-src="img/portfolio/arting/06.jpg" alt="">
+                    <img class="img-fluid d-block max-auto lazy" data-src="img/portfolio/arting/07.jpg" alt="">
+                    <img class="img-fluid d-block max-auto lazy" data-src="img/portfolio/arting/logo.jpg" alt="">
+                    <img class="img-fluid d-block max-auto lazy" data-src="img/portfolio/arting/baner.jpg" alt="">
+                    <p>I’ve been working as the graphic designer of Artingle since 2019 at Divar Studio. Artingle helps you meet your favorite artists and learn from them.</p>
+                    <ul class="list-inline">
+                      <li>Date: 2019 - Present</li>
+                      
+                    </ul>
+                    <button class="btn btn-primary" data-dismiss="modal" type="button">
+                      <i class="fa fa-times"></i>
+                      Close Project</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
     <!-- Bootstrap core JavaScript -->
